tests/cases/compiler-development/artifact/errors/diagnostic-match-unknown-enum-case.diagnostic
diagnostic error code=T0001 family=type message="unknown enum case 'Missing'" sources=1 labels=2 notes=1 helps=1
  Source source_id=0 kind=file path="tests/cases/match/errors/match-unknown-enum-case.ari" display="tests/cases/match/errors/match-unknown-enum-case.ari" bytes=177
  Label index=0 role=primary source_id=0 source="tests/cases/match/errors/match-unknown-enum-case.ari" line=9 column=5 end_line=9 end_column=12 byte_start=100 byte_end=107 message=""
  Snippet label=0 text="  --> tests/cases/match/errors/match-unknown-enum-case.ari:9:5\n   |\n 9 |     Missing(_) => {\n   |     ^^^^^^^"
  Label index=1 role=secondary source_id=0 source="tests/cases/match/errors/match-unknown-enum-case.ari" line=1 column=6 end_line=1 end_column=15 byte_start=5 byte_end=14 message="matched value has enum type 'OptionI32'"
  Snippet label=1 text="  --> tests/cases/match/errors/match-unknown-enum-case.ari:1:6\n   |\n 1 | enum OptionI32 {\n   |      ^^^^^^^^^"
  Note index=0 location=none message="enum match arms must name cases declared by the matched enum"
  Help index=0 location=none message="use one of None, Some(_)"
